--- a/briefing.html
+++ b/briefing.html
@@ -163,7 +163,7 @@
                 <div class="max-w-4xl mx-auto">
                     <div class="flex justify-center mb-8 space-x-4">
                         <button id="solution-tab-framework" class="solution-tab btn-secondary active px-6 py-2 rounded-full font-semibold">핵심 인텔리전스 프레임워크</button>
-                        <button id="solution-tab-language" class="solution-tab btn-secondary px-6 py-2 rounded-full font-semibold">다국어 네이티브 전달</button>
+                        <button id="solution-tab-language" class="solution-tab btn-secondary px-6 py-2 rounded-full font-semibold">최첨단 AI 아나운서</button>
                     </div>
 
                     <div id="solution-content-framework" class="solution-content">
@@ -192,18 +192,18 @@
 
                     <div id="solution-content-language" class="solution-content hidden">
                         <div class="bg-gray-50 p-8 rounded-lg text-center">
-                            <h3 class="text-2xl font-bold mb-6">단순 번역을 넘어, 진정한 현지화 소통</h3>
-                            <p class="text-gray-600 mb-8">AI 더빙이나 기계 번역이 아닌, 각 언어권의 전문 네이티브 아나운서가 직접 브리핑을 전달하여 문화적 뉘앙스까지 완벽하게 구현합니다. 예를 들어, 미국 시장 분석은 5개 언어 버전으로 각각 제작됩니다.</p>
+                            <h3 class="text-2xl font-bold mb-6">최첨단 AI 아나운서, 완벽한 현지화 구현</h3>
+                            <p class="text-gray-600 mb-8">기존의 로봇 같은 AI 더빙이나 기계 번역 자막과는 차원이 다릅니다. 딥서치의 최첨단 AI 아나운서는 실제 사람과 같이 자연스러운 억양, 어조, 전달 속도를 구현하여 문화적 뉘앙스까지 완벽하게 전달합니다.</p>
                             <div class="flex justify-center items-center space-x-4 mb-6">
-                                <button class="lang-selector" data-lang="ko" data-name="김민준 아나운서" data-img="https://placehold.co/100x100/EBF8FF/3182CE?text=KOR">🇰🇷</button>
-                                <button class="lang-selector" data-lang="en" data-name="John Smith" data-img="https://placehold.co/100x100/FEFCBF/D69E2E?text=ENG">🇺🇸</button>
-                                <button class="lang-selector" data-lang="ja" data-name="佐藤 健太" data-img="https://placehold.co/100x100/FEEBC8/DD6B20?text=JPN">🇯🇵</button>
-                                <button class="lang-selector" data-lang="vi" data-name="Nguyễn Văn An" data-img="https://placehold.co/100x100/FED7D7/C53030?text=VNM">🇻🇳</button>
-                                <button class="lang-selector" data-lang="id" data-name="Budi Santoso" data-img="https://placehold.co/100x100/E6FFFA/2C7A7B?text=IDN">🇮🇩</button>
+                                <button class="lang-selector" data-lang="ko" data-name="AI Voice (KR)" data-img="https://placehold.co/100x100/EBF8FF/3182CE?text=AI-KOR">🇰🇷</button>
+                                <button class="lang-selector" data-lang="en" data-name="AI Voice (EN)" data-img="https://placehold.co/100x100/FEFCBF/D69E2E?text=AI-ENG">🇺🇸</button>
+                                <button class="lang-selector" data-lang="ja" data-name="AI Voice (JP)" data-img="https://placehold.co/100x100/FEEBC8/DD6B20?text=AI-JPN">🇯🇵</button>
+                                <button class="lang-selector" data-lang="vi" data-name="AI Voice (VN)" data-img="https://placehold.co/100x100/FED7D7/C53030?text=AI-VNM">🇻🇳</button>
+                                <button class="lang-selector" data-lang="id" data-name="AI Voice (ID)" data-img="https://placehold.co/100x100/E6FFFA/2C7A7B?text=AI-IDN">🇮🇩</button>
                             </div>
                             <div class="flex flex-col items-center">
-                                <img id="announcer-img" src="https://placehold.co/100x100/EBF8FF/3182CE?text=KOR" alt="Announcer" class="w-24 h-24 rounded-full mb-4 object-cover shadow-lg">
-                                <p id="announcer-name" class="font-bold text-xl">김민준 아나운서</p>
+                                <img id="announcer-img" src="https://placehold.co/100x100/EBF8FF/3182CE?text=AI-KOR" alt="AI Announcer" class="w-24 h-24 rounded-full mb-4 object-cover shadow-lg">
+                                <p id="announcer-name" class="font-bold text-xl">AI Voice (KR)</p>
                                 <p id="announcer-lang" class="text-gray-500">한국어 브리핑</p>
                             </div>
                         </div>
