--- a/global-aI-defense.html
+++ b/global-aI-defense.html
@@ -270,33 +270,57 @@
                     <h2 class="text-3xl font-bold text-gray-900">경쟁 우위: 점유되지 않은 시장</h2>
                     <p class="mt-3 max-w-2xl mx-auto text-lg text-gray-600">현재 시장에는 AI와 국방의 교차점에 순수하게 집중하는 상품이 없습니다. 이는 '최초'이자 '최고'의 상품으로 시장을 정의할 수 있는 명백한 선점 기회입니다.</p>
                 </div>
-                <div class="mt-16 grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <div class="stat-card border-2 border-blue-500 ring-4 ring-blue-100">
-                        <h3 class="text-xl font-bold text-blue-700">제안: Global AI Defense ETF</h3>
-                        <ul class="mt-4 space-y-3 text-gray-700">
-                            <li class="flex items-center"><span class="text-green-500 mr-2">✓</span> AI & 자율성 테마 집중</li>
-                            <li class="flex items-center"><span class="text-green-500 mr-2">✓</span> 글로벌 포트폴리오</li>
-                            <li class="flex items-center"><span class="text-green-500 mr-2">✓</span> 미래지향적 하이브리드 가중</li>
-                            <li class="flex items-center"><span class="text-green-500 mr-2">✓</span> 높은 테마 순수성</li>
-                        </ul>
+                <div class="mt-16">
+                    <h3 class="text-2xl font-bold text-gray-800 mb-6 text-center">해외 주요 ETF 비교</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                        <div class="stat-card border-2 border-blue-500 ring-4 ring-blue-100">
+                            <h3 class="text-xl font-bold text-blue-700">제안: Global AI Defense ETF</h3>
+                            <ul class="mt-4 space-y-3 text-gray-700">
+                                <li class="flex items-center"><span class="text-green-500 mr-2">✓</span> AI & 자율성 테마 집중</li>
+                                <li class="flex items-center"><span class="text-green-500 mr-2">✓</span> 글로벌 포트폴리오</li>
+                                <li class="flex items-center"><span class="text-green-500 mr-2">✓</span> 미래지향적 하이브리드 가중</li>
+                                <li class="flex items-center"><span class="text-green-500 mr-2">✓</span> 높은 테마 순수성</li>
+                            </ul>
+                        </div>
+                        <div class="stat-card opacity-70">
+                            <h3 class="text-xl font-bold text-gray-800">기존 방산 ETF (ITA, PPA)</h3>
+                             <ul class="mt-4 space-y-3 text-gray-700">
+                                <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 전통/레거시 기업 편중</li>
+                                <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 미국 중심의 제한적 범위</li>
+                                <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 과거지향적 시총 가중</li>
+                                <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 상업 항공우주로 희석</li>
+                            </ul>
+                        </div>
+                        <div class="stat-card opacity-70">
+                            <h3 class="text-xl font-bold text-gray-800">기존 기술 ETF (BOTZ)</h3>
+                             <ul class="mt-4 space-y-3 text-gray-700">
+                                <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 비국방 분야로 테마 희석</li>
+                                <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 낮은 국방 테마 관련성</li>
+                                <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 지정학적 순풍 미반영</li>
+                                <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 산업/의료 로봇에 집중</li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="stat-card opacity-70">
-                        <h3 class="text-xl font-bold text-gray-800">기존 방산 ETF (ITA, PPA)</h3>
-                         <ul class="mt-4 space-y-3 text-gray-700">
-                            <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 전통/레거시 기업 편중</li>
-                            <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 미국 중심의 제한적 범위</li>
-                            <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 과거지향적 시총 가중</li>
-                            <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 상업 항공우주로 희석</li>
-                        </ul>
-                    </div>
-                    <div class="stat-card opacity-70">
-                        <h3 class="text-xl font-bold text-gray-800">기존 기술 ETF (BOTZ)</h3>
-                         <ul class="mt-4 space-y-3 text-gray-700">
-                            <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 비국방 분야로 테마 희석</li>
-                            <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 낮은 국방 테마 관련성</li>
-                            <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 지정학적 순풍 미반영</li>
-                            <li class="flex items-center"><span class="text-red-500 mr-2">✗</span> 산업/의료 로봇에 집중</li>
-                        </ul>
+                </div>
+                <div class="mt-20">
+                    <h3 class="text-2xl font-bold text-gray-800 mb-6 text-center">국내 주요 ETF 비교: 명확한 차별점</h3>
+                    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+                        <div class="stat-card opacity-70">
+                            <h4 class="font-bold text-lg">WON 미국우주항공방산</h4>
+                            <p class="mt-3 text-gray-600"><strong class="text-red-600">한계점:</strong> 개별종목 집중도 부족. 준수한 상대수익률에도 불구하고 낮은 AUM 기록.</p>
+                        </div>
+                        <div class="stat-card opacity-70">
+                            <h4 class="font-bold text-lg">TIGER 미국방산TOP10</h4>
+                            <p class="mt-3 text-gray-600"><strong class="text-red-600">한계점:</strong> 시장성 떨어지는 종목 구성. 저조한 수익률과 낮은 AUM 성장성.</p>
+                        </div>
+                        <div class="stat-card opacity-70">
+                            <h4 class="font-bold text-lg">HANARO 유럽방산</h4>
+                            <p class="mt-3 text-gray-600"><strong class="text-red-600">한계점:</strong> 유럽 재무장 '원플레이'의 뚜렷한 한계. 글로벌 트렌드 미반영.</p>
+                        </div>
+                        <div class="stat-card opacity-70">
+                            <h4 class="font-bold text-lg">TIMEFOLIO 글로벌우주테크&방산액티브</h4>
+                            <p class="mt-3 text-gray-600"><strong class="text-red-600">한계점:</strong> 잦은 종목 변경. 리테일 관심은 높으나, 장기적 테마 지속성 의문.</p>
+                        </div>
                     </div>
                 </div>
             </div>
