--- a/finorma.html
+++ b/finorma.html
@@ -210,7 +210,7 @@
         </section>
 
         <section id="solution" class="pt-24 -mt-16">
-            <h2 class="text-3xl font-bold text-center text-gray-900">DeepSearch의 해답: <span class="text-blue-600">Finorma</span></h2>
+            <h2 class="text-3xl font-bold text-center text-gray-900" data-i18n-key="solution.title">Finorma</h2>
             <p class="mt-4 text-lg text-gray-700 text-center max-w-3xl mx-auto" data-i18n-key="solution.desc">
                 딥서치는 이 모든 과정을 하나로 통합한 금융 AI 인프라 'Finorma'를 제공합니다.
                 고객사는 복잡한 기반 기술 구축 없이 즉시 AI 서비스를 개발할 수 있습니다.
