--- a/finorma.html
+++ b/finorma.html
@@ -409,7 +409,7 @@
             </div>
 
             <div class="mt-8 max-w-lg mx-auto bg-white p-8 rounded-lg shadow-lg border border-gray-100 text-left">
-                <h3 class="text-2xl font-bold text-gray-900 text-center">Jay Kim (김재윤 대표)</h3>
+                <h3 class="text-2xl font-bold text-gray-900 text-center">Jay Kim</h3>
                 <div class="mt-6 space-y-4 text-lg">
                     <div class="flex items-center">
                         <span class="text-blue-600 w-6 text-center text-xl">📞</span>
